--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,17 +9,17 @@
         android:id="@+id/btn_life_a"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#14c4b4"
+        android:background="#d4f4f4"
         android:gravity="center"
         android:text="生命周期_activity"
         android:textSize="12sp" />
 
     <TextView
-        android:id="@+id/btn_launch"
+        android:id="@+id/btn_launch_mode"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="6dp"
-        android:background="#14c4c4"
+        android:background="#d4f4f4"
         android:gravity="center"
         android:text="启动模式"
         android:textSize="12sp" />
@@ -29,29 +29,9 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        android:background="#14c4c4"
+        android:background="#d4f4f4"
         android:gravity="center"
         android:text="生命周期_service"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/btn_life_save"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:background="#14c4e4"
-        android:gravity="center"
-        android:text="保存状态"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/btn_startup_ams"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:background="#14c4f4"
-        android:gravity="center"
-        android:text="Activity启动流程分析"
         android:textSize="12sp" />
 
     <TextView
@@ -59,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        android:background="#14c4a4"
+        android:background="#d4f4f4"
         android:gravity="center"
         android:text="发送广播"
         android:textSize="12sp" />
@@ -69,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        android:background="#14c494"
+        android:background="#d4f4f4"
         android:gravity="center"
         android:text="ContentProvider"
         android:textSize="12sp" />
@@ -80,9 +60,19 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        android:background="#14c494"
+        android:background="#d4f4f4"
         android:gravity="center"
         android:text="IntentFilter"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/btn_life_save"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:background="#d4f4f4"
+        android:gravity="center"
+        android:text="保存状态"
         android:textSize="12sp" />
 
 </LinearLayout>
