--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
 
+    <color name="bg_green_300">#ffa081</color>
+    <color name="bg_green_500">#ffaacc</color>
+    <color name="bg_green_700">#aaddaa</color>
+    <color name="bg_green_900">#fdd012</color>
+
 </resources>
