--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,73 +6,13 @@
     android:padding="30dp">
 
     <TextView
-        android:id="@+id/btn_life_a"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#d4f4f4"
-        android:gravity="center"
-        android:text="生命周期_activity"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/btn_launch_mode"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="6dp"
-        android:background="#d4f4f4"
-        android:gravity="center"
-        android:text="启动模式"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/btn_life_s"
+        android:id="@+id/btn_loading"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
         android:background="#d4f4f4"
         android:gravity="center"
-        android:text="生命周期_service"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/btn_receiver_send"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:background="#d4f4f4"
-        android:gravity="center"
-        android:text="发送广播"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/btn_content_provider"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:background="#d4f4f4"
-        android:gravity="center"
-        android:text="ContentProvider"
-        android:textSize="12sp" />
-
-
-    <TextView
-        android:id="@+id/btn_intent_filter"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:background="#d4f4f4"
-        android:gravity="center"
-        android:text="IntentFilter"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/btn_life_save"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:background="#d4f4f4"
-        android:gravity="center"
-        android:text="保存状态"
+        android:text="首页"
         android:textSize="12sp" />
 
 </LinearLayout>
