--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,20 @@
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+
+
+    <!--横线-->
+    <style name="line_horizontal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/px1</item>
+        <item name="android:background">@color/color_f4f4f4</item>
+    </style>
+
+    <!--竖线-->
+    <style name="line_vertical">
+        <item name="android:layout_width">0.5dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/color_dddddd</item>
+    </style>
 </resources>
