--- a/app/src/main/res/layout/activity_fragment_main.xml
+++ b/app/src/main/res/layout/activity_fragment_main.xml
@@ -4,19 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--    <FrameLayout-->
-    <!--        android:id="@+id/fl_main_container"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="0dp"-->
-    <!--        android:layout_weight="1" />-->
-
-    <com.lifecycle.ponent.fragment.NoSwipeViewPager
+    <com.lifecycle.ponent.widget.NoSwipeViewPager
         android:id="@+id/vp_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
-    <com.lifecycle.ponent.fragment.FooterBarView
+    <com.lifecycle.ponent.homefragment.FooterBarView
         android:id="@+id/footer_view_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
