--- a/app/src/main/res/layout/activity_save.xml
+++ b/app/src/main/res/layout/activity_save.xml
@@ -7,10 +7,11 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_second"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:gravity="center"
-        android:text="Activity Two!"
+        android:text="Activity One"
         android:textColor="#353535"
         android:textSize="14sp" />
 
