--- a/app/src/main/res/layout/item_view_bottom_menu_footer.xml
+++ b/app/src/main/res/layout/item_view_bottom_menu_footer.xml
@@ -5,14 +5,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="55dp"
         android:gravity="center"
-        android:padding="3dp">
+        android:padding="2dp">
 
         <ImageView
             android:id="@+id/iv_menu_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerHorizontal="true" />
 
         <TextView
@@ -21,10 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/iv_menu_item"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="4dp"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
 
     </RelativeLayout>
 </merge>
