--- a/app/src/main/res/layout/activity_common.xml
+++ b/app/src/main/res/layout/activity_common.xml
@@ -119,7 +119,7 @@
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/singleTask_code"
+            android:id="@+id/singleTask_newtask"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="#d4f4f4"
